# assembly_editor

./: .gitignore  CMakeLists.txt  README.md  changes.cpp  changes.h  draw_main.cpp  draw_main.h  hello.cpp  instructions.cpp  instructions.h  main_state.cpp  main_state.h
inputs/: binary.txt  bits.txt  builtins.txt  cmp.txt  jmp.txt  mov.txt
